Make tests compatible with jdk 8